feat: rework Kernel video settings into a scrolling sectioned list
The settings screen was a paged table: options were split across pages
reached by Previous/Next buttons, each row drew its own panel, and the
only explanation of a setting was its tooltip.

Replace the pages with one scrolling list inside a fixed frame, grouped
under section headings, in the manner of Sodium and VulkanMod. The list
scrolls by whole entries measured against the live viewport, so no row is
ever drawn clipped at any GUI scale or window size, and a track shows the
position and the visible share. A panel beneath the list names the
highlighted setting and explains what it changes, so the explanation is
readable without holding the cursor still; tooltips stay on the controls
for keyboard and narration users.

Give the Shaders tab the same frame and add a Pack options view that lists
the options the active pack declares, with their pack-written descriptions,
a marker on values changed from the pack default, and Pack defaults to
restore them. An option the pack marks as a slider gets a position
indicator rather than a drag handle, since dragging would recompile the
whole pipeline at every intermediate value. Modrinth paging moves into the
list as a final row.

Only rows inside the viewport exist as widgets, so the interaction probes
walk the list with the screens' scrollBy rather than looking for a page
button.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>